--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "vue-toast-nanfeng",
-  "version": "1.0.4",
+  "version": "1.0.6",
   "description": "",
-  "main": ".src/lib/index.js",
+  "main": "./src/lib/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
