--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-toast-nanfeng",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "",
   "main": "./src/lib/index.js",
   "scripts": {
@@ -18,6 +18,7 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "vue": "^2.6.11",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "less-loader": "^5.0.0",
